corrected errors with names overlapping and fixed other little errors

--- a/css/style.css
+++ b/css/style.css
@@ -5527,7 +5527,7 @@ table tr td {
 }
 .article-container .title h4 {
   color: white;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   font-weight: 400;
   margin-bottom: 0;
   padding: 0.4em;
